<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_marginTop="56dp"
            tools:context="layout.CapitolulSapteFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            card_view:cardCornerRadius="3dp"
            card_view:cardElevation="3dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="4dp"
                    android:textSize="14sp"
                    android:text="@string/cap7_1"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textSize="14sp"
                    android:text="@string/cap7_2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textSize="14sp"
                    android:text="@string/cap7_3"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textSize="14sp"
                    android:text="•Această formulare, cunoscută mai frecvent ca formularea Thomson–Planck, interzice funcţionarea motorului termic cu o sursă unică de căldură"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:src="@drawable/cap7_1"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textSize="14sp"
                    android:text="@string/cap7_4"/>


            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>
