<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_marginTop="56dp"
            tools:context="layout.CapitolulDoiFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            card_view:cardCornerRadius="3dp"
            card_view:cardElevation="3dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textSize="14sp"
                    android:text="•Să analizăm o altă modalitate de variaţie a energiei interne a unui sistem termodinamic. Admitem că un corp solid A, aflat la temperatura T(A) , este introdus într-un vas cu lichid, a cărui temperatură T(B) este mai joasă, T(A) > T(B). Întreaga suprafaţă a corpului solid vine în contact cu lichidul. În procesul mişcării termice, moleculele dintr-o parte a suprafeţei de contact se ciocnesc cu moleculele din cealaltă parte a ei, din vecinătatea acesteia."/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/cap3_1"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textSize="14sp"
                    android:text="•Temperatura corpului solid este mai înaltă decât a lichidului, deci moleculele solidului au energii cinetice de translaţie mai mari decât moleculele lichidului. La ciocniri moleculele solidului transmit o parte din energia lor cinetică moleculelor lichidului. Astfel, prin suprafaţa de separaţie solid–lichid are loc un transfer de energie, o parte din energia internă a corpului solid este transmisă lichidului ce-l înconjoară."/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            card_view:cardCornerRadius="3dp"
            card_view:cardElevation="3dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textSize="14sp"
                    android:text="@string/cap3_1"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            card_view:cardCornerRadius="3dp"
            card_view:cardElevation="3dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textSize="14sp"
                    android:text="•Din cele expuse mai sus rezultă că schimbul de căldură are loc numai în cazul în care corpurile aflate în contact au temperaturi diferite. Odată cu egalarea temperaturilor se egalează şi energiile cinetice medii de translaţie a moleculelor, iar schimbul de căldură încetează. Sistemul de corpuri trece în starea de echilibru termic şi temperatura în diferite regiuni ale lui are aceeaşi valoare. "/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textSize="14sp"
                    android:text="•Astfel, există două modalităţi de variaţie a energiei interne a unui sistem: prin efectuarea unui lucru mecanic şi prin schimb de căldură. În primul caz este necesar ca volumul sistemului să varieze, iar în al doilea caz nu este necesară această variaţie. "/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textSize="14sp"
                    android:text="•Cantitatea de căldură se notează cu Q. Unitatea acesteia este aceeaşi ca şi a energiei, adică 1 J*. Prin convenţie, cantitatea de căldură primită de sistem este considerată pozitivă, iar cea cedată – negativă.  "/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            card_view:cardCornerRadius="3dp"
            card_view:cardElevation="3dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textSize="14sp"
                    android:text="•Pentru cantitatea de căldură cu care sistemul face schimb cu mediul înconjurător pe parcursul unui ciclu avem:"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:src="@drawable/cap3_2"
                    android:layout_gravity="center"
                    android:layout_marginBottom="4dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            card_view:cardCornerRadius="3dp"
            card_view:cardElevation="3dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textSize="14sp"
                    android:text="@string/cap3_3"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:src="@drawable/cap3_3"
                    android:layout_gravity="center"
                    android:layout_marginBottom="4dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            card_view:cardCornerRadius="3dp"
            card_view:cardElevation="3dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textSize="14sp"
                    android:text="@string/cap3_4"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:src="@drawable/cap3_4"
                    android:layout_gravity="center"
                    android:layout_marginBottom="4dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            card_view:cardCornerRadius="3dp"
            card_view:cardElevation="3dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textSize="14sp"
                    android:text="@string/cap3_5"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:src="@drawable/cap3_5"
                    android:layout_gravity="center"
                    android:layout_marginBottom="4dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            card_view:cardCornerRadius="3dp"
            card_view:cardElevation="3dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textSize="14sp"
                    android:text="@string/cap3_6"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:src="@drawable/cap3_6"
                    android:layout_gravity="center"
                    android:layout_marginBottom="4dp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>

</ScrollView>
